started creating auth, made linters and docker configuration

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -10,12 +10,16 @@ help:
 	@echo "make clean                        - cleanup docker kitchen."
 
 build:
-	sudo docker-compose build
+	sudo docker compose build
 
 run:
-	sudo docker-compose up
+	sudo docker compose up
 
 clean:
-	sudo rm -rf ../database/
-	sudo rm -rf ../store/
 	sudo docker system prune -a --volumes
+
+prod: build run
+
+local: clean
+	sudo docker compose -f docker-compose-local.yml up --build
+
