--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,11 @@ name = "Benefit Bistro"
 
 [tool.mypy]
 plugins = [ "pydantic.mypy" ]
+disallow_any_generics = false
+check_untyped_defs = true
+warn_return_any = false
+ignore_missing_imports = false
+disable_error_code = ["empty-body"]
+
+[tool.flakeheaven]
+inline-quotes = "'"
