--- a/docker/.env.local
+++ b/docker/.env.local
@@ -1,5 +1,12 @@
 # Uvicorn environments, must be the same as in <Projects's root>/.env for project:
+HOST="0.0.0.0"
 PORT=8000
+LOG_LEVEL="debug"
+RELOAD=true
+
+# Gunicorn environments:
+WORKERS=4
+WORKER_CLASS="uvicorn.workers.UvicornWorker"
 
 # Postgres variables, must be the same as DATABASE_* environments in <Projects's root>/.env for project:
 POSTGRES_USER="postgresql"
