corrected uow work, made transactions work correctly, created /me endpoint

--- a/.env.local
+++ b/.env.local
@@ -26,7 +26,7 @@ DATABASE_NAME="benefit_bistro"
 DATABASE_ECHO=true
 DATABASE_POOL_RECYCLE=3600
 DATABASE_POOL_PRE_PING=true
-AUTO_FLUSH=true
+DATABASE_AUTO_FLUSH=false
 
 # Cookies environments:
 COOKIES_KEY=Access-Token
