--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
       - name: Set up Python environment
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: '3.12'
       - name: Install requirements
         run: pip install -r ./requirements/prod.txt
       - name: Run flake8
-        run: flake8 ./src -v
+        run: flake8 ./ -v
   mypy:
     runs-on: ubuntu-latest
     name: Mypy
@@ -25,11 +25,11 @@ jobs:
       - name: Set up Python environment
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: '3.12'
       - name: Install requirements
         run: pip install -r ./requirements/prod.txt
       - name: Run mypy
-        run: mypy ./src
+        run: mypy ./
   pytest:
     runs-on: ubuntu-latest
     name: PyTest
@@ -39,7 +39,7 @@ jobs:
       - name: Set up Python environment
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: '3.12'
       - name: Install requirements
         run: pip install -r ./requirements/local.txt
       - name: Run pytest
