--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,6 @@ jobs:
         with:
           python-version: '3.12'
       - name: Install requirements
-        run: pip install -r ./requirements/local.txt
+        run: pip install -r ./requirements/prod.txt
       - name: Run pytest
         run: pytest -v
