[BFB-10] - created email verification functionality and tests for it

--- a/docker/.env.local
+++ b/docker/.env.local
@@ -8,9 +8,16 @@ RELOAD=true
 WORKERS=4
 WORKER_CLASS="uvicorn.workers.UvicornWorker"
 
-# Postgres variables, must be the same as DATABASE_* environments in <Projects's root>/.env for project:
+# Postgres environments, must be the same as DATABASE_* environments in <Projects's root>/.env for project:
 POSTGRES_USER="postgresql"
 POSTGRES_PASSWORD="postgresql"
 POSTGRES_HOST="localhost"
 POSTGRES_PORT=5432
 POSTGRES_DB="benefit_bistro"
+
+# Redis environments, must be the same as REDIS_* environments in <Projects's root>/.env for project:
+REDIS_PASSWORD="redis_password"
+REDIS_PORT=6379
+
+# Flower environments:
+FLOWER_PORT=5555
