--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -7,13 +7,73 @@ services:
     image: postgres
     restart: always
     env_file:
-      - .env
+      - ../.env.local
     volumes:
       - ../database_data:/var/lib/postgresql/data
       - ../database_backups:/backups
       - ../scripts/postgres:/scripts
     ports:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
+
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - ${REDIS_PORT}:${REDIS_PORT}
+    volumes:
+      - ../redis/data:/root/redis
+      - ../redis/redis.conf:/usr/local/etc/redis/redis.conf
+    command: [ 'redis-server', '--requirepass', '${REDIS_PASSWORD}' ]
+    env_file:
+      - ../.env.local
+
+  celery:
+    image: celery
+    container_name: celery
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
+    depends_on:
+      - redis
+      - celery_beat
+    env_file:
+      - ../.env.local
+    environment:
+      REDIS_HOST: redis  # need for correct work inside docker
+    command: [ './scripts/celery.sh', 'celery' ]
+
+  celery_beat:
+    image: celery_beat
+    container_name: celery_beat
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
+    depends_on:
+      - redis
+    env_file:
+      - ../.env.local
+    environment:
+      REDIS_HOST: redis  # need for correct work inside docker
+    command: [ './scripts/celery.sh', 'beat' ]
+
+  flower:
+    image: flower
+    container_name: flower
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
+    depends_on:
+      - redis
+      - celery
+      - celery_beat
+    env_file:
+      - ../.env.local
+    environment:
+      REDIS_HOST: redis  # need for correct work inside docker
+    command: [ './scripts/celery.sh', 'flower' ]
+    ports:
+      - ${FLOWER_PORT}:${FLOWER_PORT}
+
 
 #networks:
 #  default:
