--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ${PORT}:${PORT}
     depends_on:
       - database
+      - redis
+      - celery
     volumes:
       - ../alembic/versions:/app/alembic/versions
 
@@ -23,13 +25,67 @@ services:
     image: postgres
     restart: always
     env_file:
-      - .env
+      - ../.env
     volumes:
       - ../database_data:/var/lib/postgresql/data
       - ../database_backups:/backups
       - ../scripts/postgres:/scripts
     ports:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
+
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - ${REDIS_PORT}:${REDIS_PORT}
+    volumes:
+      - ../redis/data:/root/redis
+      - ../redis/redis.conf:/usr/local/etc/redis/redis.conf
+    command: [ 'redis-server', '--requirepass', '${REDIS_PASSWORD}' ]
+    env_file:
+      - ../.env
+
+  celery:
+    image: celery
+    container_name: celery
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
+    depends_on:
+      - redis
+      - celery_beat
+    env_file:
+      - ../.env
+    command: [ './scripts/celery.sh', 'celery' ]
+
+  celery_beat:
+    image: celery_beat
+    container_name: celery_beat
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
+    depends_on:
+      - redis
+    env_file:
+      - ../.env
+    command: [ './scripts/celery.sh', 'beat' ]
+
+  flower:
+    image: flower
+    container_name: flower
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
+    depends_on:
+      - redis
+      - celery
+      - celery_beat
+    env_file:
+      - ../.env
+    command: [ './scripts/celery.sh', 'flower' ]
+    ports:
+      - ${FLOWER_PORT}:${FLOWER_PORT}
+
 
 #networks:
 #  default:
