--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ ignore_missing_imports = false
 disable_error_code = ['empty-body', 'method-assign']
 exclude = ['database_data/', 'database_backups/', 'alembic/']
 
+# Avoiding "skipping analyzing 'celery' error":
+[[tool.mypy.overrides]]
+module = "celery.*"
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 testpaths = [
     'tests',
