--- a/.env.local
+++ b/.env.local
@@ -27,6 +27,7 @@ DATABASE_ECHO=true
 DATABASE_POOL_RECYCLE=3600
 DATABASE_POOL_PRE_PING=true
 DATABASE_AUTO_FLUSH=false
+DATABASE_EXPIRE_ON_COMMIT=false
 
 # Cookies environments:
 COOKIES_KEY=Access-Token
