--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ LOG_LEVEL="debug"
 RELOAD=true
 
 # CORS environments:
-ALLOW_ORIGINS=["*"]
+ALLOW_ORIGINS=["http://localhost:5173", "http://127.0.0.1:5173"]
 ALLOW_HEADERS=["*"]
 ALLOW_CREDENTIALS=true
 ALLOW_METHODS=["*"]
