--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -7,7 +7,7 @@ services:
     image: postgres
     restart: always
     env_file:
-      - ../.env.local
+      - .env.local
     volumes:
       - ../database_data:/var/lib/postgresql/data
       - ../database_backups:/backups
@@ -25,7 +25,7 @@ services:
       - ../redis/redis.conf:/usr/local/etc/redis/redis.conf
     command: [ 'redis-server', '--requirepass', '${REDIS_PASSWORD}' ]
     env_file:
-      - ../.env.local
+      - .env.local
 
   celery:
     image: celery
