--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: postgres
     restart: always
     env_file:
-      - ../.env
+      - .env
     volumes:
       - ../database_data:/var/lib/postgresql/data
       - ../database_backups:/backups
@@ -43,7 +43,7 @@ services:
       - ../redis/redis.conf:/usr/local/etc/redis/redis.conf
     command: [ 'redis-server', '--requirepass', '${REDIS_PASSWORD}' ]
     env_file:
-      - ../.env
+      - .env
 
   celery:
     image: celery
