started refactoring project according event-listening architecture

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,16 @@
 name: main-workflow
 run-name: ${{ github.actor }} is testing changes
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - dkhorkov
+      - hikfe
+  pull_request:
+    branches:
+      - master
+      - dkhorkov
+      - hikfe
 jobs:
   flake8:
     runs-on: ubuntu-latest
